cmake_minimum_required(VERSION 3.10)

project(aten_min)

set(PYTORCH_SRC_DIR ../pytorch)
set(PYTORCH_ORIG_BUILD_DIR ${PYTORCH_SRC_DIR}/build)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED True)
cmake_policy(SET CMP0076 NEW)
cmake_policy(SET CMP0077 NEW)

option(RESET "Restore and modify PyTorch source tree")
option(BUILD_SHARED_LIBS_OPT "add_library() to create shared libraries if on")
option(USE_STATIC_DISPATCH "Use static dispatch for ATen operators" ON)
option(USE_CUDA "disable compiling CUDA, to save compile time")
option(USE_DISTRIBUTED "disable distributed (c10d, gloo, mpi, etc.) build")
option(USE_MKLDNN "disable using MKL-DNN")
option(USE_FBGEMM "disable using FBGEMM (quantized 8-bit server operators)")
option(USE_NNPACK "disable compiling with NNPACK")
option(USE_QNNPACK "disable QNNPACK build (quantized 8-bit operators)")
option(USE_XNNPACK "disable compiling with XNNPACK")
option(BUILD_CUSTOM_PROTOBUF "Build and use Caffe2's own protobuf under third_party" ON)
option(BUILD_PYTHON "Build Python binaries")
option(BUILD_CAFFE2_OPS "Build Caffe2 operators" ON)

if(RESET)
  find_package(Git)
  if(Git_FOUND)
    execute_process(COMMAND ${GIT_EXECUTABLE} restore :/ WORKING_DIRECTORY ${PYTORCH_SRC_DIR})
  endif()

  file(READ ${PYTORCH_SRC_DIR}/caffe2/core/common.h FILE_CONTENTS)
  string(REPLACE "caffe2/core/macros.h" "${CMAKE_BINARY_DIR}/caffe2/core/macros.h" FILE_CONTENTS "${FILE_CONTENTS}")
  file(WRITE ${PYTORCH_SRC_DIR}/caffe2/core/common.h "${FILE_CONTENTS}")
endif()

# Copy required files from ${PYTORCH_BUILD_DIR} to ${CMAKE_BINARY_DIR} if not already there
if(NOT EXISTS ${CMAKE_BINARY_DIR}/c10)
  file(COPY ${PYTORCH_ORIG_BUILD_DIR}/c10 DESTINATION ${CMAKE_BINARY_DIR})
endif()
if(NOT EXISTS ${CMAKE_BINARY_DIR}/aten)
  file(COPY ${PYTORCH_ORIG_BUILD_DIR}/aten DESTINATION ${CMAKE_BINARY_DIR})
endif()
file(READ ${CMAKE_BINARY_DIR}/c10/macros/cmake_macros.h FILE_CONTENTS)

if(BUILD_SHARED_LIBS_OPT)
  string(FIND ${FILE_CONTENTS} "/* #undef C10_BUILD_SHARED_LIBS */" POS)
  if(NOT ${POS} EQUAL -1)
    string(REPLACE "/* #undef C10_BUILD_SHARED_LIBS */" "#define C10_BUILD_SHARED_LIBS" FILE_CONTENTS "${FILE_CONTENTS}")
    file(WRITE ${CMAKE_BINARY_DIR}/c10/macros/cmake_macros.h "${FILE_CONTENTS}")
  endif()
else()
  string(FIND ${FILE_CONTENTS} "#define C10_BUILD_SHARED_LIBS" POS)
  if(NOT ${POS} EQUAL -1)
    string(REPLACE "#define C10_BUILD_SHARED_LIBS" "/* #undef C10_BUILD_SHARED_LIBS */" FILE_CONTENTS "${FILE_CONTENTS}")
    file(WRITE ${CMAKE_BINARY_DIR}/c10/macros/cmake_macros.h "${FILE_CONTENTS}")
  endif()
endif()

if(USE_STATIC_DISPATCH)
  string(FIND ${FILE_CONTENTS} "/* #undef USE_STATIC_DISPATCH */" POS)
  if(NOT ${POS} EQUAL -1)
    string(REPLACE "/* #undef USE_STATIC_DISPATCH */" "#define USE_STATIC_DISPATCH" FILE_CONTENTS "${FILE_CONTENTS}")
    file(WRITE ${CMAKE_BINARY_DIR}/c10/macros/cmake_macros.h "${FILE_CONTENTS}")
  endif()
else()
  string(FIND ${FILE_CONTENTS} "#define USE_STATIC_DISPATCH" POS)
  if(NOT ${POS} EQUAL -1)
    string(REPLACE "#define USE_STATIC_DISPATCH" "/* #undef USE_STATIC_DISPATCH */" FILE_CONTENTS "${FILE_CONTENTS}")
    file(WRITE ${CMAKE_BINARY_DIR}/c10/macros/cmake_macros.h "${FILE_CONTENTS}")
  endif()
endif()

add_executable(aten_min aten_min.cpp)

target_include_directories(aten_min PUBLIC ${PYTORCH_SRC_DIR})
target_include_directories(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src)
target_include_directories(aten_min PUBLIC ${CMAKE_BINARY_DIR})
target_include_directories(aten_min PUBLIC ${CMAKE_BINARY_DIR}/aten/src)

target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/Dict.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/Dimname.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/Formatting.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/List.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/NamedTensor.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/Tensor.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/VariableHooksInterface.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/boxing/KernelFunction.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/dispatch/DispatchKeyExtractor.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/dispatch/Dispatcher.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/dispatch/OperatorEntry.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/grad_mode.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/interned_strings.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/ivalue.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/op_registration/infer_schema.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/operator_name.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/register_symbols.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/type.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/core/DefaultDtype.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/core/Device.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/core/DeviceType.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/core/DispatchKey.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/core/DispatchKeySet.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/core/TensorImpl.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/core/UndefinedTensorImpl.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/core/impl/LocalDispatchKeySet.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/util/Backtrace.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/util/Exception.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/util/Logging.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/util/SmallVector.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/util/StringUtil.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/util/Type.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/util/UniqueVoidPtr.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/util/flags_use_no_gflags.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/util/typeid.cpp)
target_sources(aten_min PUBLIC ${CMAKE_BINARY_DIR}/aten/src/ATen/Functions.cpp)
target_sources(aten_min PUBLIC ${CMAKE_BINARY_DIR}/aten/src/ATen/core/TensorMethods.cpp)
