cmake_minimum_required(VERSION 3.10)

project(aten_min)

set(PYTORCH_SRC_DIR ../pytorch)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED True)
cmake_policy(SET CMP0076 NEW)

option(RESET "Restore and modify PyTorch source tree")
option(USE_CUDA "disable compiling CUDA, to save compile time")
option(USE_DISTRIBUTED "disable distributed (c10d, gloo, mpi, etc.) build")
option(USE_MKLDNN "disable using MKL-DNN")
option(USE_FBGEMM "disable using FBGEMM (quantized 8-bit server operators)")
option(USE_NNPACK "disable compiling with NNPACK")
option(USE_QNNPACK "disable QNNPACK build (quantized 8-bit operators)")
option(USE_XNNPACK "disable compiling with XNNPACK")
option(BUILD_CUSTOM_PROTOBUF "Build and use Caffe2's own protobuf under third_party" ON)
option(BUILD_PYTHON "Build Python binaries")
option(BUILD_CAFFE2_OPS "Build Caffe2 operators" ON)

if(RESET)
  find_package(Git)
  if(Git_FOUND)
    execute_process(COMMAND ${GIT_EXECUTABLE} restore :/ WORKING_DIRECTORY ${PYTORCH_SRC_DIR})
  endif()

  file(READ ${PYTORCH_SRC_DIR}/cmake/Codegen.cmake FILE_CONTENTS)
  string(REPLACE "function(filter_list output input)" "message(\"xxx Codegen\")\nfunction(filter_list output input)" FILE_CONTENTS "${FILE_CONTENTS}")
  string(REPLACE "endif()" "endif()\nmessage(\"xxx list line $\{CMAKE_CURRENT_LIST_LINE}\")" FILE_CONTENTS "${FILE_CONTENTS}")
  string(REPLACE "endif()" "message(\"xxx list line $\{CMAKE_CURRENT_LIST_LINE}\")\nendif()" FILE_CONTENTS "${FILE_CONTENTS}")
  string(REPLACE "set(GEN_COMMAND" "message(\"xxx $\{GEN_COMMAND}\")\n  set(GEN_COMMAND" FILE_CONTENTS "${FILE_CONTENTS}")
  file(WRITE ${PYTORCH_SRC_DIR}/cmake/Codegen.cmake "${FILE_CONTENTS}")

  add_subdirectory(${PYTORCH_SRC_DIR}/c10 ${CMAKE_BINARY_DIR}/c10)
  include(${PYTORCH_SRC_DIR}/cmake/Codegen.cmake)
endif()

add_executable(aten_min aten_min.cpp)

#message("xxx $\{PYTORCH_SRC_DIR}/aten/src = ${PYTORCH_SRC_DIR}/aten/src")
file(READ ${PYTORCH_SRC_DIR}/aten/src/ATen/ATen.h FILE_CONTENTS)
#message("xxx cat $\{PYTORCH_SRC_DIR}/aten/src/ATen/ATen.h\n ${FILE_CONTENTS}")
target_include_directories(aten_min PUBLIC ${PYTORCH_SRC_DIR})
target_include_directories(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src)
target_include_directories(aten_min PUBLIC ${CMAKE_BINARY_DIR})

target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/Dict.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/Dimname.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/Formatting.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/List.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/NamedTensor.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/Tensor.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/VariableHooksInterface.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/boxing/KernelFunction.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/dispatch/DispatchKeyExtractor.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/dispatch/Dispatcher.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/dispatch/OperatorEntry.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/grad_mode.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/interned_strings.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/ivalue.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/op_registration/infer_schema.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/operator_name.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/register_symbols.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/aten/src/ATen/core/type.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/core/DefaultDtype.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/core/Device.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/core/DeviceType.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/core/DispatchKey.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/core/DispatchKeySet.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/core/TensorImpl.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/core/UndefinedTensorImpl.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/core/impl/LocalDispatchKeySet.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/util/Backtrace.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/util/Exception.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/util/Logging.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/util/SmallVector.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/util/StringUtil.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/util/Type.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/util/UniqueVoidPtr.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/util/flags_use_no_gflags.cpp)
target_sources(aten_min PUBLIC ${PYTORCH_SRC_DIR}/c10/util/typeid.cpp)
#target_sources(aten_min PUBLIC ${CMAKE_BINARY_DIR}/aten/src/ATen/Functions.cpp)
#target_sources(aten_min PUBLIC ${CMAKE_BINARY_DIR}/aten/src/ATen/core/TensorMethods.cpp)
